images compressed and player section start

--- a/index.html
+++ b/index.html
@@ -48,6 +48,22 @@
                 </div>
             </div>
         </section>
+        <!-- player-section and player-container is in our default style  -->
+        <section class="player-section">
+            <div class="player-container container">
+                <div class="card__wrapper">
+                    <!-- each an every singel card start with card__container -->
+                    <div class="card__container">
+                        <div class="card__body">
+                            <div class="card__img"><img id="card__img" src="./images/player-9.png" alt="football player"></div>
+                            <h1 class="card__title">Mohamed Salah</h1>
+                            <p class="card__info">Mohamed Salah is one of the most prolific forwards in European football and a Champions League and Premier League winner with Liverpool.</p>
+                            <a href="https://www.liverpoolfc.com/team/first-team/player/mohamed-salah#" target="_blank" class="cta card__cta">Follow</a>
+                        </div>
+                    </div>       
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
