finished player card section with grid

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <header>
         <div class="container">
             <nav>
+                <!-- creating hamburger menu with css -->
                 <div class="burger hide-desktop">
                     <div class="line1"></div>
                     <div class="line2"></div>
@@ -54,13 +55,135 @@
                 <div class="card__wrapper">
                     <!-- each an every singel card start with card__container -->
                     <div class="card__container">
-                        <div class="card__body">
-                            <div class="card__img"><img id="card__img" src="./images/player-9.png" alt="football player"></div>
+                        <div class="card__body flow">
+                            <div class="card__img"><img id="card__img" src="./images/player-9.png"
+                                    alt="football player"></div>
                             <h1 class="card__title">Mohamed Salah</h1>
-                            <p class="card__info">Mohamed Salah is one of the most prolific forwards in European football and a Champions League and Premier League winner with Liverpool.</p>
-                            <a href="https://www.liverpoolfc.com/team/first-team/player/mohamed-salah#" target="_blank" class="cta card__cta">Follow</a>
+                            <p class="card__info">Mohamed Salah is one of the most prolific forwards in European
+                                football and a Champions League and Premier League winner with Liverpool.</p>
+                            <a href="https://www.liverpoolfc.com/team/first-team/player/mohamed-salah#" target="_blank"
+                                class="cta card__cta">Follow</a>
                         </div>
-                    </div>       
+                    </div>
+                    <div class="card__container">
+                        <div class="card__body flow">
+                            <div class="card__img"><img id="card__img" src="./images/player-8.png"
+                                    alt="football player"></div>
+                            <h1 class="card__title">Kylian Mbappé</h1>
+                            <p class="card__info">Kylian Mbappe Lottin is a French professional footballer who plays as a forward for the France National Football Team and Paris Saint-Germain</p>
+                            <a href="https://www.sportskeeda.com/player/kylian-mbappe" target="_blank"
+                                class="cta card__cta">Follow</a>
+                        </div>
+                    </div>
+                    <div class="card__container">
+                        <div class="card__body flow">
+                            <div class="card__img"><img id="card__img" src="./images/player-5.png"
+                                    alt="football player"></div>
+                            <h1 class="card__title">Mesut Ozil</h1>
+                            <p class="card__info"> In the Premier League from Real Madrid in 2013,He created more chances than any other player, and contributed the most assists.</p>
+                            <a href="https://www.arsenal.com/men/players/mesut-ozil" target="_blank"
+                                class="cta card__cta">Follow</a>
+                        </div>
+                    </div>
+                    <div class="card__container">
+                        <div class="card__body flow">
+                            <div class="card__img"><img id="card__img" src="./images/player-1.png"
+                                    alt="football player"></div>
+                            <h1 class="card__title">Neymar Jr</h1>
+                            <p class="card__info">
+                                A football player is a sportsperson who plays one of the different types of football It has been estimated that there are 250 million association football players in the world.</p>
+                            <a href="https://www.fourfourtwo.com/features/50-best-players-in-the-world-2021" target="_blank"
+                                class="cta card__cta">Follow</a>
+                        </div>
+                    </div>
+                    <div class="card__container">
+                        <div class="card__body flow">
+                            <div class="card__img"><img id="card__img" src="./images/player-2.png"
+                                    alt="football player"></div>
+                            <h1 class="card__title">Lionel Messi</h1>
+                            <p class="card__info">
+                                A football player is a sportsperson who plays one of the different types of football It has been estimated that there are 250 million association football players in the world.</p>
+                            <a href="https://www.fourfourtwo.com/features/50-best-players-in-the-world-2021" target="_blank"
+                                class="cta card__cta">Follow</a>
+                        </div>
+                    </div>
+                    <div class="card__container">
+                        <div class="card__body flow">
+                            <div class="card__img"><img id="card__img" src="./images/player-3.png"
+                                    alt="football player"></div>
+                            <h1 class="card__title">Cr. Ronaldo</h1>
+                            <p class="card__info">
+                                A football player is a sportsperson who plays one of the different types of football It has been estimated that there are 250 million association football players in the world.</p>
+                            <a href="https://www.fourfourtwo.com/features/50-best-players-in-the-world-2021" target="_blank"
+                                class="cta card__cta">Follow</a>
+                        </div>
+                    </div>
+                    <div class="card__container">
+                        <div class="card__body flow">
+                            <div class="card__img"><img id="card__img" src="./images/player-4.png"
+                                    alt="football player"></div>
+                            <h1 class="card__title">Paulo Dybala</h1>
+                            <p class="card__info">
+                                A football player is a sportsperson who plays one of the different types of football It has been estimated that there are 250 million association football players in the world.</p>
+                            <a href="https://www.fourfourtwo.com/features/50-best-players-in-the-world-2021" target="_blank"
+                                class="cta card__cta">Follow</a>
+                        </div>
+                    </div>
+                    <div class="card__container">
+                        <div class="card__body flow">
+                            <div class="card__img"><img id="card__img" src="./images/player-6.png"
+                                    alt="football player"></div>
+                            <h1 class="card__title">Mauro Icardi </h1>
+                            <p class="card__info">
+                                A football player is a sportsperson who plays one of the different types of football It has been estimated that there are 250 million association football players in the world.</p>
+                            <a href="https://www.fourfourtwo.com/features/50-best-players-in-the-world-2021" target="_blank"
+                                class="cta card__cta">Follow</a>
+                        </div>
+                    </div>
+                    <div class="card__container">
+                        <div class="card__body flow">
+                            <div class="card__img"><img id="card__img" src="./images/player-7.png"
+                                    alt="football player"></div>
+                            <h1 class="card__title">Di Maria</h1>
+                            <p class="card__info">
+                                A football player is a sportsperson who plays one of the different types of football It has been estimated that there are 250 million association football players in the world.</p>
+                            <a href="https://www.fourfourtwo.com/features/50-best-players-in-the-world-2021" target="_blank"
+                                class="cta card__cta">Follow</a>
+                        </div>
+                    </div>
+                    <div class="card__container">
+                        <div class="card__body flow">
+                            <div class="card__img"><img id="card__img" src="./images/player-10.png"
+                                    alt="football player"></div>
+                            <h1 class="card__title">Harry Kane</h1>
+                            <p class="card__info">
+                                A football player is a sportsperson who plays one of the different types of football It has been estimated that there are 250 million association football players in the world.</p>
+                            <a href="https://www.fourfourtwo.com/features/50-best-players-in-the-world-2021" target="_blank"
+                                class="cta card__cta">Follow</a>
+                        </div>
+                    </div>
+                    <div class="card__container">
+                        <div class="card__body flow">
+                            <div class="card__img"><img id="card__img" src="./images/player-11.png"
+                                    alt="football player"></div>
+                            <h1 class="card__title">Kevin De Bruyne</h1>
+                            <p class="card__info">
+                                A football player is a sportsperson who plays one of the different types of football It has been estimated that there are 250 million association football players in the world.</p>
+                            <a href="https://www.fourfourtwo.com/features/50-best-players-in-the-world-2021" target="_blank"
+                                class="cta card__cta">Follow</a>
+                        </div>
+                    </div>
+                    <div class="card__container">
+                        <div class="card__body flow">
+                            <div class="card__img"><img id="card__img" src="./images/player-12.png"
+                                    alt="football player"></div>
+                            <h1 class="card__title">Philippe Coutinho</h1>
+                            <p class="card__info">
+                                A football player is a sportsperson who plays one of the different types of football It has been estimated that there are 250 million association football players in the world.</p>
+                            <a href="https://www.fourfourtwo.com/features/50-best-players-in-the-world-2021" target="_blank"
+                                class="cta card__cta">Follow</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
