added upcomming matches section and add images

--- a/index.html
+++ b/index.html
@@ -59,8 +59,7 @@
                             <div class="card__img"><img id="card__img" src="./images/player-9.png"
                                     alt="football player"></div>
                             <h1 class="card__title">Mohamed Salah</h1>
-                            <p class="card__info">Mohamed Salah is one of the most prolific forwards in European
-                                football and a Champions League and Premier League winner with Liverpool.</p>
+                            <p class="card__info">A football player is a sportsperson who plays one of the different types of football It has been estimated that there are 250 million association football players in the world.</p>
                             <a href="https://www.liverpoolfc.com/team/first-team/player/mohamed-salah#" target="_blank"
                                 class="cta card__cta">Follow</a>
                         </div>
@@ -70,7 +69,7 @@
                             <div class="card__img"><img id="card__img" src="./images/player-8.png"
                                     alt="football player"></div>
                             <h1 class="card__title">Kylian Mbappé</h1>
-                            <p class="card__info">Kylian Mbappe Lottin is a French professional footballer who plays as a forward for the France National Football Team and Paris Saint-Germain</p>
+                            <p class="card__info">A football player is a sportsperson who plays one of the different types of football It has been estimated that there are 250 million association football players in the world.</p>
                             <a href="https://www.sportskeeda.com/player/kylian-mbappe" target="_blank"
                                 class="cta card__cta">Follow</a>
                         </div>
@@ -80,7 +79,7 @@
                             <div class="card__img"><img id="card__img" src="./images/player-5.png"
                                     alt="football player"></div>
                             <h1 class="card__title">Mesut Ozil</h1>
-                            <p class="card__info"> In the Premier League from Real Madrid in 2013,He created more chances than any other player, and contributed the most assists.</p>
+                            <p class="card__info"> A football player is a sportsperson who plays one of the different types of football It has been estimated that there are 250 million association football players in the world.</p>
                             <a href="https://www.arsenal.com/men/players/mesut-ozil" target="_blank"
                                 class="cta card__cta">Follow</a>
                         </div>
@@ -188,11 +187,82 @@
             </div>
         </section>
         <!-- player card section end -->
-
+        <section class="matches">
+            <div class="container">
+                <div class="title"><h2>World Cup Qualifing Match On September 1st 2021</h2></div>
+                <div class="card__wrapper__matches">
+                    <div class="card__container">
+                        <div class="card__body flow">
+                            <h1 class="card__title__match">Time-18:30</h1>
+                            <div class="card__info__match">
+                                <div class="info__one flow">
+                                    <div class="card__img"><img id="card__img" src="./images/kazakhstan.png" alt="contry-flag"></div>
+                                    <h3>KAZAKHISTAN</h3>
+                                </div>
+                                <div class="vs">VS</div>
+                                <div class="info__two flow">
+                                    <div class="card__img"><img id="card__img" src="./images/ukraine.png" alt="contry-flag"></div>
+                                    <h3>UKRAINE</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card__container">
+                        <div class="card__body flow">
+                            <h1 class="card__title__match">Time-12:00</h1>
+                            <div class="card__info__match">
+                                <div class="info__one flow">
+                                    <div class="card__img"><img id="card__img" src="./images/denmark.png" alt="contry-flag"></div>
+                                    <h3>DENMARK</h3>
+                                </div>
+                                <div class="vs">VS</div>
+                                <div class="info__two flow">
+                                    <div class="card__img"><img id="card__img" src="./images/scotland.png" alt="contry-flag"></div>
+                                    <h3>SCOTLAND</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card__container">
+                        <div class="card__body flow">
+                            <h1 class="card__title__match">Time-00:45</h1>
+                            <div class="card__info__match">
+                                <div class="info__one flow">
+                                    <div class="card__img"><img id="card__img" src="./images/russia.png" alt="contry-flag"></div>
+                                    <h3>RUSSIA</h3>
+                                </div>
+                                <div class="vs">VS</div>
+                                <div class="info__two flow">
+                                    <div class="card__img"><img id="card__img" src="./images/croatia.png" alt="contry-flag"></div>
+                                    <h3>CROATIA</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card__container">
+                        <div class="card__body flow">
+                            <h1 class="card__title__match">Time-23:50</h1>
+                            <div class="card__info__match">
+                                <div class="info__one flow">
+                                    <div class="card__img"><img id="card__img" src="./images/denmark.png" alt="contry-flag"></div>
+                                    <h3>DENMARK</h3>
+                                </div>
+                                <div class="vs">VS</div>
+                                <div class="info__two flow">
+                                    <div class="card__img"><img id="card__img" src="./images/scotland.png" alt="contry-flag"></div>
+                                    <h3>SCOTLAND</h3>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+<!-- contact section -->
         <section class="contact-section">
             <div class="container" >
                 <div class="contact-left-col">
-                    <div class="contact-title">
+                    <div class="contact-title title">
                     <h2>Contact</h2>
                     <p>Book A Ticket for 2023 world cup into Qatar Al Bayt Stadium.We will reply you with in in 10 minute for confermation</p>
                     </div>
