end with mobile device design

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
         </section>
         <!-- player card section end -->
         <section class="matches">
-            <div class="container">
+
                 <div class="title"><h2>World Cup Qualifing Match On September 1st 2021</h2></div>
                 <div class="card__wrapper__matches">
                     <div class="card__container">
@@ -256,7 +256,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+
         </section>
 <!-- contact section -->
         <section class="contact-section">
@@ -283,6 +283,18 @@
                 </div>
             </div>
         </section>
+        <footer>
+            <div class="container">
+                <div class="footer-banner"><img src="./images/Logo.png" alt="footer-banner" id="footer-img"></div>
+            <div class="footer-icons">
+                <i class="fab fa-slack-hash icon-round"></i>
+                <i class="fab fa-facebook icon-round"></i>
+                <i class="fab fa-twitter-square icon-round"></i>
+                <i class="fab fa-instagram-square icon-round"></i>
+            </div>
+            <div class="footer-copyright"> Copyright <i class="far fa-copyright"></i> All rights reserved By FIFA</div>
+            </div>
+        </footer>
     </main>
 </body>
 
