modified contact section and add medea query

--- a/index.html
+++ b/index.html
@@ -260,12 +260,12 @@
         </section>
 <!-- contact section -->
         <section class="contact-section">
-            <div class="container" >
+            <div class="contact-title title">
+                <h2>Contact</h2>
+                <p>Book A Ticket for 2023 world cup into Qatar Al Bayt Stadium.We will reply you with in in 10 minute for confermation</p>
+                </div>
+            <div class="container contact-wrapper" >
                 <div class="contact-left-col">
-                    <div class="contact-title title">
-                    <h2>Contact</h2>
-                    <p>Book A Ticket for 2023 world cup into Qatar Al Bayt Stadium.We will reply you with in in 10 minute for confermation</p>
-                    </div>
                     <form action="">
                         <label for="name">Name</label>
                         <input type="text" id="name">
