add comment as nedded and remove unuse code.

--- a/index.html
+++ b/index.html
@@ -35,12 +35,14 @@
             </nav>
         </div>
     </header>
+    <!-- starting main -->
     <main>
+        <!-- this is the top banner-section as hero -->
         <section class="hero">
             <div class="container" id="hero-grid">
                 <div class="hero-left-col">
                     <h1 class="hero-title">Conmebol Copa America 2021 </h1>
-                    <a class="hero-cta cta">
+                    <a href="https://www.youtube.com/watch?v=VLfsIrOT2OY" target="_blank" class="hero-cta cta">
                         <p>Watch Live</p><i class="fas fa-arrow-right"></i>
                     </a>
                 </div>
@@ -50,6 +52,7 @@
             </div>
         </section>
         <!-- player-section and player-container is in our default style  -->
+        <!-- card section with all player -->
         <section class="player-section">
             <div class="player-container container">
                 <div class="card__wrapper">
@@ -64,6 +67,7 @@
                                 class="cta card__cta">Follow</a>
                         </div>
                     </div>
+                    <!-- each card__container take a singel player card -->
                     <div class="card__container">
                         <div class="card__body flow">
                             <div class="card__img"><img id="card__img" src="./images/player-8.png"
